Bug 499022 - online price updates have wrong currency
Summary: online price updates have wrong currency
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: git (master)
Platform: openSUSE Linux
: NOR major
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-01-22 18:25 UTC by Robby Engelmann
Modified: 2025-02-17 16:34 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2
Sentry Crash Report:


Attachments
what KMyMoney says (175.08 KB, image/png)
2025-01-22 18:25 UTC, Robby Engelmann
Details
what Yahoo says (214.06 KB, image/png)
2025-01-22 18:25 UTC, Robby Engelmann
Details
Yahoo Setup in KMyMoney (193.17 KB, image/png)
2025-01-22 18:29 UTC, Robby Engelmann
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Robby Engelmann 2025-01-22 18:25:01 UTC
Using Yahoo as the online price update source, I get since some time the price stated as EUR, but looking to Yahoo directly as USD for an investment with USD as the trading currency.
See screenshots attached.

I am using the openSUSE git snapshots from the Extra repo, but branched to still build against KF5.
Comment 1 Robby Engelmann 2025-01-22 18:25:23 UTC
Created attachment 177597 [details]
what KMyMoney says
Comment 2 Robby Engelmann 2025-01-22 18:25:38 UTC
Created attachment 177598 [details]
what Yahoo says
Comment 3 Robby Engelmann 2025-01-22 18:29:02 UTC
Created attachment 177599 [details]
Yahoo Setup in KMyMoney
Comment 4 Robby Engelmann 2025-01-22 18:30:54 UTC
(In reply to Robby Engelmann from comment #0)
> Using Yahoo as the online price update source, I get since some time the
> price stated as EUR, but looking to Yahoo directly as USD for an investment
> with USD as the trading currency.
> See screenshots attached.
> 
> I am using the openSUSE git snapshots from the Extra repo, but branched to
> still build against KF5.

actually it is the Unstable:Extra repo, branched to:
https://build.opensuse.org/project/show/home:robsn81:branches:KDE:Unstable:Extra
Comment 5 Thomas Baumgart 2025-01-22 22:29:20 UTC
What is the selection of the trading currency in the security details of JNK?
Comment 6 Robby Engelmann 2025-01-23 07:48:17 UTC
it is USD
Comment 7 Robby Engelmann 2025-01-23 07:53:05 UTC
It first appears between 2.12.2024 and 4.12.2024. I am suspecting it to be related to:
https://bugs.kde.org/show_bug.cgi?id=497036

I changed to the master snapshots and changed the yahoo online resource according to your suggestions...
Comment 8 Robby Engelmann 2025-02-03 13:41:15 UTC
It is still appearing when using:
kmymoney-5.1.80git3216~3983356-ku.12.1.x86_64
libalkimia5-8-8.1.90git.20250107T022322~3cf8441-ku.8.1.x86_64
Comment 9 Thomas Baumgart 2025-02-14 16:49:55 UTC
Git commit 3a13ed633b37852155a7c1d33e48284f6b0f392f by Thomas Baumgart.
Committed on 14/02/2025 at 16:49.
Pushed by tbaumgart into branch 'master'.

Use security's trading currency when storeing price updates

The price information for securities used the base currency instead of
the trading currency of the security.

This bug was introduced with commit 84cbad07 when fixing another bug.
FIXED-IN: 5.2

M  +1    -1    kmymoney/dialogs/kequitypriceupdatedlg.cpp

https://invent.kde.org/office/kmymoney/-/commit/3a13ed633b37852155a7c1d33e48284f6b0f392f
Comment 10 Robby Engelmann 2025-02-17 16:34:56 UTC
Fixed, thanks!