Use security's trading currency when storeing price updates

The price information for securities used the base currency instead of
the trading currency of the security.

This bug was introduced with commit 84cbad07 when fixing another bug.

BUG: 499022
FIXED-IN: 5.2